<resources>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="app_name">JetDemo</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="take_crop_photo">Take&amp;Crop Photo</string>
    <string name="pick_crop_photo">Pick&amp;Crop Photo</string>
    <string name="save_photo_default">Save Photo by Default</string>
    <string name="save_photo_high_quality">Save Photo by High Quality</string>
    <string name="save_photo_low_quality">Save Photo by Low Quality</string>
    <string name="goto_directory">Go to Directory</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close_drawer</string>

    <string name="image_picker">Image Picker</string>
    <string name="image_saver">Image Saver</string>
    <string name="image_loader">Image Loader</string>
    <string name="pretty_banner">Pretty Banner</string>
    <string name="circular_reveal">Circular Reveal</string>
    <string name="drawer_layout">Drawer Layout</string>
    <string name="native_drawer_layout">Native Drawer Layout</string>
    <string name="collapse_tab_layout">Tab Layout (collapse)</string>
    <string name="collapse_toolbar_layout">Toolbar Layout (collapse)</string>
    <string name="drawer_collapse_tab_layout">Drawer Tab Layout (collapse)</string>
    <string name="refresh_loadmore">Refresh Loadmore</string>
    <string name="drawable_dyer">Drawable Dyer</string>
    <string name="cute_check_box">Cute CheckBox</string>
    <string name="cute_loading_view">Cute Loading View</string>
    <string name="cute_loading_dialog">Cute Loading Dialog</string>
    <string name="corner_linear_layout">Corner Linear Layout</string>
    <string name="bottom_sheet_behavior_demo">Bottom Sheet Behavior</string>
    <string name="sandwich_layout">Sandwich Layout</string>
    <string name="sandwich_web_view">Sandwich Web View</string>

</resources>
