<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_photo" />

            <Button
                android:id="@+id/btn_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_photo" />

            <Button
                android:id="@+id/btn_take_crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_crop_photo" />

            <Button
                android:id="@+id/btn_pick_crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_crop_photo" />

        </LinearLayout>

    </LinearLayout>

</layout>