<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_go_directory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goto_directory" />

            <Button
                android:id="@+id/btn_save_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_photo_default" />

            <Button
                android:id="@+id/btn_save_high_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_photo_high_quality" />

            <Button
                android:id="@+id/btn_save_low_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_photo_low_quality" />

        </LinearLayout>

    </LinearLayout>

</layout>